# Avalon_Nano3s

./: .gitignore  readme.md
cg_miner/: CMakeLists.txt  main.c  mm_miner.h
cg_miner/api/: CMakeLists.txt  api.c
cg_miner/cgminer/: CMakeLists.txt  cg_log.c  cg_log.h  cgminer.c  cgminer.h  config.h  driver-avalon.c  driver-avalon.h  hexdump.c  hexdump.h  klist.c  miner.h  noncedup.c  poolcfg.c  poolcfg.h  util.c  util.h
cg_miner/cgminer/ccan/: CMakeLists.txt
cg_miner/cgminer/ccan/opt/: helpers.c  opt.c
cg_miner/cgminer/compat/: CMakeLists.txt
cg_miner/cgminer/compat/jansson-2.9/src/: error.c  load.c
cg_miner/thirdlibs/: CMakeLists.txt
cg_miner/thirdlibs/zlog/src/: event.c
cg_miner/utils/: CMakeLists.txt  crc.h  crc16.c  logging.c  logging.h  sha256_util.c  sha256_util.h  sysutils.c  sysutils.h
cg_miner/web/: CMakeLists.txt
cg_miner/web/cgi/: cgi.c  cgi.h
cg_miner/web/html/: cgpools.html  dashboard.html  login.html
cg_miner/web/http/: http.c  http.h  mongoose.c  mongoose.h
docs/: Avalon trademark policy.docx  Nano3s Udisk upgrade instructions.docx
scripts/: build  sdkbuild
